-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 11
-
Component/s: hotspot
-
b07
-
x86
x86_32:
/pool/buildbot/slaves/sobornost/jdkX-hs/build/build/linux-x86-normal-server-release/hotspot/variant-server/libjvm/objs/ad_x86.o: In function `vpopcount2INode::emit(CodeBuffer&, PhaseRegAlloc*) const':
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/cpu/x86/x86.ad:10804: undefined reference to `Assembler::vpopcntd(XMMRegisterImpl*, XMMRegisterImpl*, int)'
/pool/buildbot/slaves/sobornost/jdkX-hs/build/build/linux-x86-normal-server-release/hotspot/variant-server/libjvm/objs/ad_x86.o: In function `vpopcount4INode::emit(CodeBuffer&, PhaseRegAlloc*) const':
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/cpu/x86/x86.ad:10815: undefined reference to `Assembler::vpopcntd(XMMRegisterImpl*, XMMRegisterImpl*, int)'
/pool/buildbot/slaves/sobornost/jdkX-hs/build/build/linux-x86-normal-server-release/hotspot/variant-server/libjvm/objs/ad_x86.o: In function `vpopcount8INode::emit(CodeBuffer&, PhaseRegAlloc*) const':
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/cpu/x86/x86.ad:10826: undefined reference to `Assembler::vpopcntd(XMMRegisterImpl*, XMMRegisterImpl*, int)'
/pool/buildbot/slaves/sobornost/jdkX-hs/build/build/linux-x86-normal-server-release/hotspot/variant-server/libjvm/objs/ad_x86.o: In function `vpopcount16INode::emit(CodeBuffer&, PhaseRegAlloc*) const':
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/cpu/x86/x86.ad:10837: undefined reference to `Assembler::vpopcntd(XMMRegisterImpl*, XMMRegisterImpl*, int)'
collect2: error: ld returned 1 exit status
/pool/buildbot/slaves/sobornost/jdkX-hs/build/build/linux-x86-normal-server-release/hotspot/variant-server/libjvm/objs/ad_x86.o: In function `vpopcount2INode::emit(CodeBuffer&, PhaseRegAlloc*) const':
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/cpu/x86/x86.ad:10804: undefined reference to `Assembler::vpopcntd(XMMRegisterImpl*, XMMRegisterImpl*, int)'
/pool/buildbot/slaves/sobornost/jdkX-hs/build/build/linux-x86-normal-server-release/hotspot/variant-server/libjvm/objs/ad_x86.o: In function `vpopcount4INode::emit(CodeBuffer&, PhaseRegAlloc*) const':
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/cpu/x86/x86.ad:10815: undefined reference to `Assembler::vpopcntd(XMMRegisterImpl*, XMMRegisterImpl*, int)'
/pool/buildbot/slaves/sobornost/jdkX-hs/build/build/linux-x86-normal-server-release/hotspot/variant-server/libjvm/objs/ad_x86.o: In function `vpopcount8INode::emit(CodeBuffer&, PhaseRegAlloc*) const':
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/cpu/x86/x86.ad:10826: undefined reference to `Assembler::vpopcntd(XMMRegisterImpl*, XMMRegisterImpl*, int)'
/pool/buildbot/slaves/sobornost/jdkX-hs/build/build/linux-x86-normal-server-release/hotspot/variant-server/libjvm/objs/ad_x86.o: In function `vpopcount16INode::emit(CodeBuffer&, PhaseRegAlloc*) const':
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/cpu/x86/x86.ad:10837: undefined reference to `Assembler::vpopcntd(XMMRegisterImpl*, XMMRegisterImpl*, int)'
collect2: error: ld returned 1 exit status
- relates to
-
JDK-8199421 Add support for vector popcount
-
- Resolved
-