8199603: Build failures after JDK-8199421 "Add support for vector popcount"

Reviewed-by: thartmann